added template for project css responive web developement of ocem

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/model1.css" />
+    <link rel="stylesheet" href="css/model2.css" />
+    <link rel="stylesheet" href="css/model3.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="head">
+        <h2>Our Menu</h2>
+      </div>
+      <div class="another-container">
+        <div class="item">
+          <h2>Chicken</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+            debitis iusto? Sit ratione iusto fugit ullam cum minima rem, totam
+            rerum ipsa eveniet. Perferendis perspiciatis veritatis nulla. Optio,
+            voluptas ut!
+          </p>
+        </div>
+        <div class="item">
+          <h2>Beef</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet porro
+            iste quos at, voluptatem repellat in eveniet blanditiis. Rem,
+            corporis cum aspernatur architecto officiis incidunt quos quasi ab
+            placeat explicabo?
+          </p>
+        </div>
+        <div class="item">
+          <h2>Sushi</h2>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Repellendus sequi nulla suscipit vero odio provident iste voluptas.
+            Alias hic deleniti reprehenderit explicabo necessitatibus architecto
+            minus. Reiciendis molestiae ab quae voluptatibus.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
