--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="css/model3.css" />
   </head>
   <body>
+    <h2 class="top">Our Menu</h2>
     <div class="container">
-      <div class="head">
-        <h2>Our Menu</h2>
-      </div>
       <div class="another-container">
-        <div class="item">
-          <h2>Chicken</h2>
+        <div class="item i1">
+          <h2>
+            <div class="shift a">Chicken</div>
+          </h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
             debitis iusto? Sit ratione iusto fugit ullam cum minima rem, totam
@@ -23,8 +23,10 @@
             voluptas ut!
           </p>
         </div>
-        <div class="item">
-          <h2>Beef</h2>
+        <div class="item i2">
+          <h2>
+            <div class="shift b">Beef</div>
+          </h2>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet porro
             iste quos at, voluptatem repellat in eveniet blanditiis. Rem,
@@ -32,8 +34,10 @@
             placeat explicabo?
           </p>
         </div>
-        <div class="item">
-          <h2>Sushi</h2>
+        <div class="item i3">
+          <h2>
+            <div class="shift c">Sushi</div>
+          </h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.
             Repellendus sequi nulla suscipit vero odio provident iste voluptas.
